<resources>
    <string name="app_name">EmPub Lite</string>
    <string name="this_is_a_text">this is a text</string>
    <string name="dummy_text">TextView</string>
    <string name="ListView">List View</string>
    <string name="todo">TODO</string>
    <string name="name">Name</string>
    <string name="this_is_multi_line">this is multi line</string>
    <string name="another_button">another button</string>
    <string name="button45">Button</string>
    <string name="button23">Button</string>
    <string name="third_button">third_button</string>
    <string name="url_string">URL : </string>
    <string name="paste_url">Paste_url</string>
    <string name="just_write_something">just write something</string>
    <string name="cancel">Cancel</string>
    <string name="are_you_a_programmer">are you a programmer?</string>
    <string name="home_planet">Home Planet :</string>
    <string name="name2">Name :</string>
    <string name="do_something_with_this_data">Do something With This Data</string>
    <string name="favourite_food">Favourite Food :</string>
    <string name="ok">OK</string>
    <string name="listactivitydemo">listactivitydemo</string>
    <string name="android_practice">Android Practice !</string>
</resources>

