<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.commonsware.empublite.EmPubLiteActivity"
    android:orientation="vertical">

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="Hello World!" />

  <TextView
      android:id="@+id/yahoo"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/this_is_a_text"
      android:textSize="20sp" />

  <TextView
      android:id="@+id/textView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/dummy_text"
      android:textSize="30sp" />

  <ImageView
      android:id="@+id/imageView2"
      android:layout_width="match_parent"
      android:layout_height="201dp"
      android:contentDescription="@string/todo"
      android:src="@mipmap/ic_launcher" />

  <EditText
      android:id="@+id/editTextTextPersonName"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:ems="10"
      android:inputType="textMultiLine"
      android:autofillHints="tinytext"
      android:hint="@string/this_is_multi_line" />

  <Button
      android:id="@+id/button"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:onClick="onClickButton"
      android:padding="19dp"
      android:text="@string/button" />


  <Button
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="1"
      android:text="@string/button" />

  <Button
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/another_button" />

</LinearLayout>
