<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/entry"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:text="@string/url_string"/>

    <EditText
        android:id="@id/entry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@id/label"
        android:inputType="text"
        android:layout_toEndOf="@id/label" />

    <Button
        android:id="@+id/ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:layout_alignRight="@id/entry"
        android:layout_alignEnd="@id/entry"
        android:layout_below="@id/entry"
        android:layout_marginRight="5dp"
        android:layout_marginEnd="5dp" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/entry"
        android:text="@string/cancel"
        android:padding="10dp"
        android:layout_toStartOf="@id/ok"
        android:layout_toLeftOf="@id/ok" />

</RelativeLayout>